# async_bevy_web_example

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs
src/: app.rs  fileserv.rs  main.rs
